# document-intelligence-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject-local.toml  pyproject.toml  requirements-railway.txt  run_real_evaluation.py  sample_evaluation_data.py
.github/workflows/: main.yml
evaluation_results/: results.jsonl
frontend/: evaluation.html  index.html  index_.html  ragas.html
notebooks/: 01_rag_notebook.ipynb  02_test_modules.ipynb
src/: main.py
src/evaluation/: __init__.py  evaluator.py
src/evaluation/ragas_integration/: __init__.py  pipeline_adapter.py  ragas_endpoints.py  ragas_evaluator.py  test_ragas.py
src/rag/: __init__.py  chunker.py  embeddings.py  llm.py  pdf_processor.py  pipeline.py  vector_store.py
